tests/negative/semantic/bool_plus_bool/input.ci
void main() {
    bool x = true + false;
    print(toString(x) + "\n");
}
